--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,69 @@
 body{
     margin: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* Header styles */
+.HeaderAndHero{
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 18px;
+    padding-bottom: 80px;
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    gap:50px;   
+}
+
+.Hero{
+    display: flex;
+    min-width: 300px;
+}
+
+.Header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.Hlinks{
+    display: flex;
+    gap:12px;
+}
+
+.Header .logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.secondary,
+a:link,
+a:visited,
+a:hover,
+a:active{
+    font-size: 18px;
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+.main{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.TextAndButton button{
+    background-color: #3882F6;
+    border: none;
+    padding: 4px 14px;
+    border-radius: 6px;
+    color: #E5E7EB;
+}
+
+.TextAndButton{
+    max-width: auto;
+}
+
+.Hero img{
+    min-width: 400px;
 }
