--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
     margin: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Header styles */
@@ -60,10 +62,27 @@ a:active{
     color: #E5E7EB;
 }
 
-.TextAndButton{
-    max-width: auto;
+
+/* Information section */
+.information{
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 18px;
+    padding-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;;
 }
 
-.Hero img{
-    min-width: 400px;
+.imgAndSubtext{
+    display: flex;
+    text-align: center;
+    gap: 16px;
+}
+
+.information .heading{
+    color: #1F2937;
+    font-weight: bolder;
+    font-size: 36px;
 }
