--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,36 @@ a:active{
 .author{
     align-self: flex-end;
 }
+
+/* Call to action */
+
+.callToAction{
+    background-color: #3882F6;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: 120px;
+    margin-right: 120px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.callToAction h3{
+    padding: 0px;
+    margin: 0px;
+    color: #F9FAF8;
+}
+
+.callToAction span{
+    color: #E5E7EB;
+}
+
+.callToAction button{
+    color: #F9FAF8;
+    border-color: #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 6px;
+    padding: 4px 20px;
+    margin-left: 230px;
+}
