--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ a:active{
     padding-right: 60px;
     padding-top: 20px;
     padding-bottom: 20px;
+    border-radius: 16px;
 }
 
 .callToAction h3{
